# fastapi-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  {{ cookiecutter.file_name }}.py
{{ cookiecutter.project_name }}/tests/: conftest.py  test_{{ cookiecutter.project_name }}.py
{{ cookiecutter.project_name }}/tests/routers/: test_health.py  test_root.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: cli.py  errors.py  server.py  settings.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/dependencies/: __init__.py  settings.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/routers/: health.py  root.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/schemas/: __init__.py  errors.py  root.py
