[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
fastapi = "~0.78"
fastapi-health = "~0.4"
python-dotenv = "~0.20"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
