[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
fastapi = ">=0.78<1"
fastapi-health = ">=0.4<1"
uvicorn = ">=0.17.6<1"
fastapi-versioning = ">=0.10.0<1"
requests = "^2.28.0"
loguru = ">=0.6.0<1"
typer = ">=0.4.1<1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
mypy = ">=0.961<1"

[tool.poetry.scripts]
{{ cookiecutter.application_name }}-server = "{{ cookiecutter.project_name }}.cli:run"
{{ cookiecutter.application_name }}-cli = "{{ cookiecutter.project_name }}.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
